--- a/Database/psychopg2.ipynb
+++ b/Database/psychopg2.ipynb
@@ -3,25 +3,79 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6adf1eb3-49bf-4598-b9ac-95101699da36",
+   "id": "74743e38",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First name: ANOUP Last Name: THAPA\n",
-      "Title: MR Age: 31 Nationality: Asia\n",
-      "# Courses: 0 #Semesters: 0\n",
-      "Registration status \n",
-      "----------------------------------\n"
+      "Error connecting to PostgreSQL: connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  database \"student_data\" does not exist\n",
+      "\n",
+      "Error: invalid integer value \"your_database_port\" for connection option \"port\"\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"F:\\Users\\cvpri\\anaconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\cvpri\\AppData\\Local\\Temp\\ipykernel_12520\\367070207.py\", line 115, in enter_data\n",
+      "    if conn is not None:\n",
+      "       ^^^^\n",
+      "UnboundLocalError: cannot access local variable 'conn' where it is not associated with a value\n"
      ]
     }
    ],
    "source": [
     "import tkinter\n",
     "from tkinter import ttk\n",
-    "import sqlite3\n",
+    "import psycopg2\n",
+    "\n",
+    "\n",
+    "def connect_to_postgres():\n",
+    "    try:\n",
+    "        conn = psycopg2.connect(\n",
+    "            database=\"student_data\",  # Replace with your database name\n",
+    "            user=\"postgres\",      # Replace with your PostgreSQL username\n",
+    "            password=\"123456\",  # Replace with your PostgreSQL password\n",
+    "            host=\"localhost\",      # Replace with your PostgreSQL host (e.g., \"localhost\" or an IP address)\n",
+    "            port=\"5432\"       # Replace with your PostgreSQL port (default is 5432)\n",
+    "        )\n",
+    "        return conn\n",
+    "    except psycopg2.Error as e:\n",
+    "        print(\"Error connecting to PostgreSQL:\", e)\n",
+    "        return None\n",
+    "    \n",
+    "def create_student_data_database():\n",
+    "    try:\n",
+    "        # Connect to PostgreSQL as a superuser or a user with database creation privileges\n",
+    "        conn = connect_to_postgres()\n",
+    "        if conn is None:\n",
+    "            return\n",
+    "\n",
+    "        # Create a cursor\n",
+    "        cur = conn.cursor()\n",
+    "\n",
+    "        # Create the \"student_data\" database if it doesn't exist\n",
+    "        cur.execute(\"CREATE DATABASE IF NOT EXISTS student_data\")\n",
+    "        print(\"Database 'student_data' created successfully\")\n",
+    "\n",
+    "    except psycopg2.Error as e:\n",
+    "        print(\"Error creating 'student_data' database:\", e)\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        if conn is not None:\n",
+    "            conn.close()\n",
+    "\n",
+    "# Call the function to create the \"student_data\" database\n",
+    "create_student_data_database()\n",
+    "\n",
     "\n",
     "def enter_data():\n",
     "    # User info\n",
@@ -30,24 +84,32 @@
     "    title = title_combobox.get()\n",
     "    age = age_spinbox.get()\n",
     "    nationality = nationality_combobox.get()\n",
-    "    \n",
+    "\n",
     "    # Display a success message\n",
     "    success_label.config(text=\"Your data is recorded\")\n",
-    "         \n",
+    "\n",
     "    # Courses info\n",
     "    registration_status = reg_status_var.get()\n",
     "    numcourses = numcourses_spinbox.get()\n",
     "    numsemesters = numsemesters_spinbox.get()\n",
-    "    \n",
+    "\n",
     "    try:\n",
-    "        # Connect to the SQLite database or create it if it doesn't exist\n",
-    "        conn = sqlite3.connect(\"data_entry.db\")\n",
-    "        c = conn.cursor()\n",
-    "    \n",
+    "        # Connect to the \"student_data\" database\n",
+    "        conn = psycopg2.connect(\n",
+    "            database=\"student_data\",\n",
+    "            user=\"your_database_user\",  # Replace with the appropriate PostgreSQL user\n",
+    "            password=\"your_database_password\",  # Replace with the appropriate password\n",
+    "            host=\"your_database_host\",  # Replace with the appropriate host\n",
+    "            port=\"your_database_port\"  # Replace with the appropriate port\n",
+    "        )\n",
+    "\n",
+    "        # Create a cursor\n",
+    "        cur = conn.cursor()\n",
+    "\n",
     "        # Create a table if it doesn't exist\n",
-    "        c.execute('''\n",
+    "        cur.execute('''\n",
     "            CREATE TABLE IF NOT EXISTS user_data (\n",
-    "                id INTEGER PRIMARY KEY,\n",
+    "                id SERIAL PRIMARY KEY,\n",
     "                first_name TEXT,\n",
     "                last_name TEXT,\n",
     "                title TEXT,\n",
@@ -58,34 +120,35 @@
     "                num_semesters INTEGER\n",
     "            )\n",
     "        ''')\n",
+    "\n",
     "    \n",
     "        # Insert the data into the table\n",
-    "        c.execute('''\n",
+    "        cur.execute('''\n",
     "            INSERT INTO user_data (\n",
     "                first_name, last_name, title, age, nationality,\n",
     "                registration_status, num_courses, num_semesters\n",
     "            )\n",
-    "            VALUES (?, ?, ?, ?, ?, ?, ?, ?)\n",
+    "            VALUES (%s, %s, %s, %s, %s, %s, %s, %s)\n",
     "        ''', (firstname, lastname, title, age, nationality, registration_status, numcourses, numsemesters))\n",
-    "    \n",
-    "        # Commit the changes and close the connection\n",
+    "\n",
+    "        # Commit the changes\n",
     "        conn.commit()\n",
-    "        conn.close()\n",
-    "    \n",
+    "\n",
     "        # Display a success message\n",
     "        success_label.config(text=\"Your data is recorded\")\n",
     "\n",
     "        print(\"First name:\", firstname, \"Last Name:\", lastname)\n",
     "        print(\"Title:\", title, \"Age:\", age, \"Nationality:\", nationality)\n",
-    "        print(\"# Courses:\", numcourses,\"#Semesters:\",numsemesters)\n",
-    "        print(\"Registration status\",registration_status)\n",
+    "        print(\"# Courses:\", numcourses, \"# Semesters:\", numsemesters)\n",
+    "        print(\"Registration status\", registration_status)\n",
     "        print(\"----------------------------------\")\n",
-    "    \n",
-    "        \n",
-    "    except Exception as e:\n",
+    "\n",
+    "    except psycopg2.Error as e:\n",
     "        # Handle any exceptions, e.g., database errors\n",
     "        print(\"Error:\", str(e))\n",
-    "    \n",
+    "    finally:\n",
+    "        if conn is not None:\n",
+    "            conn.close()\n",
     "\n",
     "window = tkinter.Tk()\n",
     "window.title(\"Data Entry Form\")\n",
@@ -170,13 +233,13 @@
     "close_button = tkinter.Button(frame, text = \"Close\", command=window.destroy)\n",
     "close_button.grid(row=4, column=0, sticky=\"news\",padx=20, pady=10)\n",
     "\n",
-    "window.mainloop()\n"
+    "window.mainloop()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6b1d1fe",
+   "id": "950691bb",
    "metadata": {},
    "outputs": [],
    "source": []
